# fn-error-context

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: context.rs  simple.rs
src/: lib.rs
tests/: arg.rs  arg_pattern.rs  as_ref.rs  async_as_ref.rs  async_borrowing.rs  async_move.rs  async_no_move.rs  async_without_return.rs  async_without_return.stderr  borrowing.rs  failure.rs  fmt_args.rs  fmt_missing_arg.rs  fmt_missing_arg.stderr  fmt_named_arg.rs  fmt_unused_arg.rs  fmt_unused_arg.stderr  inherent.rs  missing_fmt.rs  missing_fmt.stderr  move.rs  no_move.rs  non_copy_arg.rs  non_copy_fmt_arg.rs  preserve_lint.rs  preserve_lint.stderr  simple.rs  tests.rs
