[package]
name = "fn-error-context"
description = "fn-error-context."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/fn-error-context"
documentation = "https://docs.rs/fn-error-context"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"

[dependencies.syn]
features = ["full", "clone-impls"]
version = "1.0.17"

[lib]
name = "fn_error_context"
proc-macro = true

[dev-dependencies]
anyhow = "1.0.27"
