[package]
name = "fn-error-context"
description = "An attribute macro to add context to errors from a function."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/fn-error-context"
documentation = "https://docs.rs/fn-error-context"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
autotests = false

[dependencies]
quote = "1.0.3"

[dependencies.syn]
features = ["full", "parsing"]
version = "1.0.17"

[lib]
name = "fn_error_context"
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
anyhow = "1.0.27"
trybuild = "1.0.24"
failure = "0.1.7"
