[package]
name = "fn-error-context"
description = "An attribute macro to add context to errors from a function."
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/fn-error-context"
documentation = "https://docs.rs/fn-error-context"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
autotests = false

[lib]
name = "fn_error_context"
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[[test]]
name = "version-numbers"
path = "tests/version_numbers.rs"

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"
syn = { version = "1.0.17", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.27"
trybuild = "1.0.24"
failure = "0.1.7"
version-sync = "0.9.1"
